--- a/05-monitoring/5.2_monitoring_ground_truth/docker-compose.yaml
+++ b/05-monitoring/5.2_monitoring_ground_truth/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
     build: . 
     depends_on:
       - metrics-db
+    environment:
+      POSTGRES_HOST: "metrics-db"
 
   metrics-db:
     image: postgres:13
