--- a/05-monitoring/5.2-monitoring-ground-truth/Dockerfile
+++ b/05-monitoring/5.2-monitoring-ground-truth/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt requirements.txt
+COPY ./5.2-monitoring-ground-truth/requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY metrics_computation.py metrics_computation.py
+COPY ./5.2-monitoring-ground-truth/. /app/.
+COPY ./utils/. /app/utils/.
 
 CMD ["python", "metrics_computation.py"]
