--- a/05-monitoring/5.3-monitoring-chat-behaviour/Dockerfile
+++ b/05-monitoring/5.3-monitoring-chat-behaviour/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY . .
-
+COPY ./5.3-monitoring-chat-behaviour/requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
+COPY ./5.3-monitoring-chat-behaviour/. .
+COPY ./utils/. /app/utils/.
 
 EXPOSE 8501
 
