--- a/04-monitoring/4.2-monitoring-llms/Dockerfile
+++ b/04-monitoring/4.2-monitoring-llms/Dockerfile
@@ -2,10 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY ./5.2-monitoring-ground-truth/requirements.txt requirements.txt
+COPY ./4.2-monitoring-llms/requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./5.2-monitoring-ground-truth/. /app/.
+COPY ./4.2-monitoring-llms/. /app/.
 COPY ./utils/. /app/utils/.
 
-CMD ["python", "metrics_computation.py"]
+CMD ["python", "main.py"]
