--- a/04-monitoring/4.2-monitoring-llms/Dockerfile
+++ b/04-monitoring/4.2-monitoring-llms/Dockerfile
@@ -7,5 +7,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./4.2-monitoring-llms/. /app/.
 COPY ./utils/. /app/utils/.
+COPY ../03-vector-search/eval/documents-with-ids.json documents-with-ids.json
+COPY ../03-vector-search/eval/ground-truth-data.csv ground-truth-data.csv
 
 CMD ["python", "main.py"]
