user feedback finished

--- a/04-monitoring/app/docker-compose.yaml
+++ b/04-monitoring/app/docker-compose.yaml
@@ -47,6 +47,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - MODEL_NAME=${MODEL_NAME}
       - INDEX_NAME=${INDEX_NAME}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     ports:
       - "${STREAMLIT_PORT:-8501}:8501"
     depends_on:
