--- a/04-monitoring/app/.env
+++ b/04-monitoring/app/.env
@@ -1,12 +1,14 @@
 # PostgreSQL Configuration
-POSTGRES_HOST=postgres
+#POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 POSTGRES_DB=course_assistant
 POSTGRES_USER=your_username
 POSTGRES_PASSWORD=your_password
 POSTGRES_PORT=5432
 
 # Elasticsearch Configuration
-ELASTIC_URL_LOCAL=http://localhost:9201
+#ELASTIC_URL_LOCAL=http://localhost:9201
+ELASTIC_URL_LOCAL=http://localhost:9200
 ELASTIC_URL=http://elasticsearch:9200
 ELASTIC_PORT=9200
 
